@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Assertions;
@@ -33,6 +32,7 @@ import org.mockito.Mockito;
 
 import com.vaadin.flow.component.AbstractField;
 import com.vaadin.flow.component.Component;
+import com.vaadin.flow.component.HasAriaDescription;
 import com.vaadin.flow.component.HasAriaLabel;
 import com.vaadin.flow.component.HasValue;
 import com.vaadin.flow.component.HasValue.ValueChangeEvent;
@@ -134,8 +134,7 @@ class CheckboxGroupTest {
         group.addValueChangeListener(events::add);
 
         List<String> keys = group.getChildren().map(Component::getElement)
-                .map(element -> element.getProperty("value"))
-                .collect(Collectors.toList());
+                .map(element -> element.getProperty("value")).toList();
         String enabledKey = keys.get(0);
         String disabledKey = keys.get(1);
 
@@ -187,6 +186,35 @@ class CheckboxGroupTest {
     }
 
     @Test
+    void customComponentInLabelSlot_setItems_componentIsPreserved() {
+        CheckboxGroup<String> group = new CheckboxGroup<>();
+        Div customLabel = new Div();
+        customLabel.getElement().setAttribute("slot", "label");
+        group.getElement().appendChild(customLabel.getElement());
+
+        group.setItems("foo", "bar");
+        group.setItems("foo", "baz");
+
+        Assertions.assertEquals(group.getElement(),
+                customLabel.getElement().getParent());
+        Assertions.assertEquals(2,
+                group.getChildren().filter(Checkbox.class::isInstance).count());
+    }
+
+    @Test
+    void helperComponent_setItems_helperComponentIsPreserved() {
+        CheckboxGroup<String> group = new CheckboxGroup<>();
+        Div helper = new Div();
+        group.setHelperComponent(helper);
+
+        group.setItems("foo", "bar");
+
+        Assertions.assertEquals(helper, group.getHelperComponent());
+        Assertions.assertEquals(group.getElement(),
+                helper.getElement().getParent());
+    }
+
+    @Test
     void deselectAll_selectionIsReset() {
         CheckboxGroup<String> checkboxGroup = new CheckboxGroup<>();
         checkboxGroup.setItems("Foo", "Bar");
@@ -216,7 +244,7 @@ class CheckboxGroupTest {
         checkboxGroup.setItems("Foo", "Bar");
 
         List<Checkbox> checkboxes = checkboxGroup.getChildren()
-                .map(Checkbox.class::cast).collect(Collectors.toList());
+                .map(Checkbox.class::cast).toList();
 
         checkboxGroup.select("Foo");
         Assertions.assertTrue(checkboxes.get(0).getValue());
@@ -588,8 +616,7 @@ class CheckboxGroupTest {
 
     private void assertCheckboxLabels(CheckboxGroup<Wrapper> checkboxGroup,
             String firstLabel, String secondLabel) {
-        List<Component> components = checkboxGroup.getChildren()
-                .collect(Collectors.toList());
+        List<Component> components = checkboxGroup.getChildren().toList();
         Assertions.assertEquals(2, components.size());
         Assertions.assertEquals(firstLabel,
                 ((Checkbox) components.get(0)).getLabel());
@@ -626,6 +653,28 @@ class CheckboxGroupTest {
 
         group.setAriaLabelledBy((String) null);
         Assertions.assertTrue(group.getAriaLabelledBy().isEmpty());
+    }
+
+    @Test
+    void implementHasAriaDescription() {
+        Assertions.assertTrue(
+                HasAriaDescription.class.isAssignableFrom(CheckboxGroup.class));
+    }
+
+    @Test
+    void setAriaDescribedBy() {
+        CheckboxGroup<String> group = new CheckboxGroup<>();
+        group.setAriaDescribedBy("description-id");
+
+        Assertions.assertEquals("description-id",
+                group.getElement().getProperty("accessibleDescriptionRef"));
+        Assertions.assertEquals("description-id",
+                group.getAriaDescribedBy().get());
+
+        group.setAriaDescribedBy((String) null);
+        Assertions.assertNull(
+                group.getElement().getProperty("accessibleDescriptionRef"));
+        Assertions.assertTrue(group.getAriaDescribedBy().isEmpty());
     }
 
     @Test
