@@ -17,7 +17,6 @@ package com.vaadin.flow.component.combobox.test;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.combobox.MultiSelectComboBox;
@@ -32,7 +31,7 @@ public class MultiSelectComboBoxValueChangePage extends Div {
         MultiSelectComboBox<String> comboBox = new MultiSelectComboBox<>(
                 "Items");
         List<String> items = IntStream.range(0, 100)
-                .mapToObj(i -> "Item " + (i + 1)).collect(Collectors.toList());
+                .mapToObj(i -> "Item " + (i + 1)).toList();
         comboBox.setItems(items);
         // Make component wider, so that we can fit multiple chips
         comboBox.setWidth("500px");
