@@ -16,7 +16,6 @@
 package com.vaadin.flow.component.grid.it;
 
 import java.time.LocalDate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.grid.Grid;
@@ -48,7 +47,7 @@ public class GridTestScrollingOver100kLines extends Div {
         grid.setHeight("300px");
 
         grid.setItems(IntStream.rangeClosed(1, 100500).mapToObj(String::valueOf)
-                .collect(Collectors.toList()));
+                .toList());
         add(grid);
     }
 
