@@ -19,7 +19,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Assertions;
@@ -31,9 +30,11 @@ import com.vaadin.flow.component.AbstractField;
 import com.vaadin.flow.component.AbstractField.ComponentValueChangeEvent;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.ComponentUtil;
+import com.vaadin.flow.component.HasAriaDescription;
 import com.vaadin.flow.component.HasAriaLabel;
 import com.vaadin.flow.component.HasValue;
 import com.vaadin.flow.component.HasValue.ValueChangeEvent;
+import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.radiobutton.dataview.RadioButtonGroupListDataView;
 import com.vaadin.flow.component.shared.HasThemeVariant;
 import com.vaadin.flow.component.shared.HasTooltip;
@@ -164,8 +165,7 @@ class RadioButtonGroupTest {
         group.addValueChangeListener(events::add);
 
         List<String> keys = group.getChildren().map(Component::getElement)
-                .map(element -> element.getProperty("value"))
-                .collect(Collectors.toList());
+                .map(element -> element.getProperty("value")).toList();
         String enabledKey = keys.get(0);
         String disabledKey = keys.get(1);
 
@@ -189,8 +189,7 @@ class RadioButtonGroupTest {
         group.setItemEnabledProvider("enabled"::equals);
 
         List<RadioButton<String>> children = group.getChildren()
-                .map(child -> (RadioButton<String>) child)
-                .collect(Collectors.toList());
+                .map(child -> (RadioButton<String>) child).toList();
 
         Assertions.assertTrue(children.get(0).isEnabled());
         Assertions.assertFalse(children.get(1).isEnabled());
@@ -230,6 +229,35 @@ class RadioButtonGroupTest {
     }
 
     @Test
+    void customComponentInLabelSlot_setItems_componentIsPreserved() {
+        RadioButtonGroup<String> group = new RadioButtonGroup<>();
+        Div customLabel = new Div();
+        customLabel.getElement().setAttribute("slot", "label");
+        group.getElement().appendChild(customLabel.getElement());
+
+        group.setItems("foo", "bar");
+        group.setItems("foo", "baz");
+
+        Assertions.assertEquals(group.getElement(),
+                customLabel.getElement().getParent());
+        Assertions.assertEquals(2, group.getChildren()
+                .filter(RadioButton.class::isInstance).count());
+    }
+
+    @Test
+    void helperComponent_setItems_helperComponentIsPreserved() {
+        RadioButtonGroup<String> group = new RadioButtonGroup<>();
+        Div helper = new Div();
+        group.setHelperComponent(helper);
+
+        group.setItems("foo", "bar");
+
+        Assertions.assertEquals(helper, group.getHelperComponent());
+        Assertions.assertEquals(group.getElement(),
+                helper.getElement().getParent());
+    }
+
+    @Test
     @SuppressWarnings("unchecked")
     void testResetAllItems() {
         RadioButtonGroup<ItemHelper> group = new RadioButtonGroup<ItemHelper>();
@@ -244,8 +272,7 @@ class RadioButtonGroupTest {
         dataView.refreshItem(item1);
         dataView.refreshItem(item2);
 
-        List<Component> components = group.getChildren()
-                .collect(Collectors.toList());
+        List<Component> components = group.getChildren().toList();
         RadioButton<ItemHelper> radioZoo = (RadioButton<ItemHelper>) components
                 .get(0);
         RadioButton<ItemHelper> radioBar = (RadioButton<ItemHelper>) components
@@ -271,8 +298,7 @@ class RadioButtonGroupTest {
         item2.setName("bar");
         dataView.refreshItem(item2);
 
-        List<Component> components = group.getChildren()
-                .collect(Collectors.toList());
+        List<Component> components = group.getChildren().toList();
         RadioButton<ItemHelper> radioFoo = (RadioButton<ItemHelper>) components
                 .get(0);
         RadioButton<ItemHelper> radioBar = (RadioButton<ItemHelper>) components
@@ -495,6 +521,28 @@ class RadioButtonGroupTest {
 
         group.setAriaLabelledBy((String) null);
         Assertions.assertTrue(group.getAriaLabelledBy().isEmpty());
+    }
+
+    @Test
+    void implementHasAriaDescription() {
+        Assertions.assertTrue(HasAriaDescription.class
+                .isAssignableFrom(RadioButtonGroup.class));
+    }
+
+    @Test
+    void setAriaDescribedBy() {
+        RadioButtonGroup<String> group = new RadioButtonGroup<>();
+        group.setAriaDescribedBy("description-id");
+
+        Assertions.assertEquals("description-id",
+                group.getElement().getProperty("accessibleDescriptionRef"));
+        Assertions.assertEquals("description-id",
+                group.getAriaDescribedBy().get());
+
+        group.setAriaDescribedBy((String) null);
+        Assertions.assertNull(
+                group.getElement().getProperty("accessibleDescriptionRef"));
+        Assertions.assertTrue(group.getAriaDescribedBy().isEmpty());
     }
 
     @Test
